<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/user_main_login"
        tools:context=".Login_Activity"
        android:animateLayoutChanges="true"
>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:hint="@string/login"
            android:autofillHints="@string/login"
            android:ems="10"
            android:background="@drawable/login_text"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#A9A9A9"
            android:id="@+id/login_loginscreen" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            android:textColor="#FFFF"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
            android:background="@drawable/login_text"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:hint="@string/haslo"
            android:autofillHints="@string/haslo"
            android:ems="10"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#A9A9A9"
            android:id="@+id/password_loginscreen" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="260dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            android:textColor="#FFFF"
            app:layout_constraintEnd_toEndOf="parent" android:layout_height="40dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:contentDescription="@string/logo"
            android:layout_width="125dp"
            android:layout_height="125dp" app:srcCompat="@drawable/fit_logo"
            android:id="@+id/zdjecieuzytkownika" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/login_loginscreen"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/zaloguj"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:textColor="#ffffff"
            android:layout_height="40dp"
            android:textSize="21sp"
            android:background="@drawable/login_button"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="200dp" app:layout_constraintTop_toBottomOf="@+id/zdjecieuzytkownika"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/zarejestrujsie"
            android:textSize="21sp"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="@+id/button" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>